# lg-geology-data-model

./: .gitignore  CHANGELOG.md  DATA_RELEASES.yaml  DIAGRAM.md  ER-GCOVER.puml  HOWTO_RELEASE.md  MANIFEST.in  Makefile  Makefile.old  README.md  README_old.md  REPLACEMENTS.txt  SCHEMA_CHANGES.yaml  SCHEMA_CHANGES_4.0-4.1.json  SCHEMA_CHANGES_4.0-4.1_JSON  all_geolcodes.py  babel.cfg  basic_excel.py  basic_read.py  coded_docmains.py  coded_domains.json  coded_domains.py  convert_to_yaml.py  create_gv.py  create_gv_v2.py  datamodel.docx  datamodel.html  datamodel.json  datamodel.md  datamodel.py  datamodel.yaml  datamodel_de.json  datamodel_de.md  datamodel_fr.json  datamodel_fr.md  db_to_erdiag.py  db_to_yaml.py  environment.yaml  esri_sde_schema_manager.py  export_coded_domains.py  (+31 more)
.github/: dependabot.yml
_old/: cd-header.tex.j2
assets/: datamodel.css  diff_metadata.yaml  metadata_de.yaml  metadata_fr.yaml  sortable.html
excel/: geology_mapping_tool_v3.1_separate.xlsx
exports/: Admixture.csv  Admixture.json  Charcat.csv  Charcat.json  Chrono.csv  Chrono.json  Composit.csv  Composit.json  Correlation.json  GeolCodeText_Trad_230317.csv  Geol_Mapping_Unit.json  Litho.csv  Litho.json  Litstrat.csv  Litstrat.json  Litstrat_Bed.json  Litstrat_Formation_Bank.json  Litstrat_Unco.json  System.csv  System.json  Tecto.csv  Tecto.json  all_geolcode.xlsx  coded_domains.json  coded_domains.xlsx  export_tables.xlsx  gcoverp_simple_report.json  geocover-schema-20240630.json  geocover-schema-sde.json  layer_symbols_rules.json  mandatory.json  mapsheets.geojson  san_bernardino.geojson  subtypes_dict.json  subtypes_layers_dict.json  subtypes_pro_layer.json  used_symbols.json
exports_i/: Admixture.csv  Admixture.json  Charcat.csv  Charcat.json  Chrono.csv  Chrono.json  Composit.csv  Composit.json  Correlation.csv  Correlation.json  Geol_Mapping_Unit.csv  Geol_Mapping_Unit.json  Geol_Mapping_Unit_Att.csv  Geol_Mapping_Unit_Att.json  Litho.csv  Litho.json  Litho_Bed.csv  Litho_Bed.json  Litho_Unco.csv  Litho_Unco.json  Litstrat_Bed.csv  Litstrat_Bed.json  Litstrat_Formation_Bank.csv  Litstrat_Formation_Bank.json  Litstrat_Unco.csv  Litstrat_Unco.json  README.txt  System.csv  System.json  Tecto.csv  Tecto.json  all_trads.xlsx  coded_domains.json  export_tables.xlsx  gcoveri_simple.json  geocover-schema-sde.json  subtypes_dict.json  tables.json
geocover/: __init__.py  datamodel.py  export_oracle_tables.py  export_symbol_rules.py  geocover.py  schema.py  utils.py
input/: Admixture.csv  Admixture.json  Bed Form Att.json  Charcat.csv  Chrono.csv  Litho.csv  Litstrat.csv  QA_all_240414.qa.xml  System.csv  System.json  (+10 more)
(+268 files in other folders)
